2007-10-01  Thomas H.P. Andersen <phomes@gmail.com>

        * gnotski.c: Fix impossible move by splitting a block. Fixes bug #481245

2007-06-29  Christian Persch <chpe@gnome.org>

        * gnotski.c:
        * Makefile.am: Allow building with gtk-only platform.

2006-09-17  Robert Ancell <robert.ancell@gmail.com>

        * gnotski.c: Mark solved puzzles in the menu (Gnome Bug #111543).

2006-09-17  Andreas Røsdal <andrearo@stud.ntnu.no>

        * gnotski.svg: Gnotski gets Tango graphics palette.

2006-07-07  Andreas Røsdal <andrearo@stud.ntnu.no>

        * gnotski.c: Fix window icon.
        Patch by me, bug reported by mclasen@redhat.com in bug #346912.

2006-06-21  Andreas Røsdal  <andrearo@stud.ntnu.no>

	* gnotski.c: Add fullscreen mode.

2006-04-29  Callum McKenzie  <callum@spooky-possum.org>

	* gnotski.c (create_space): Disable GTK+ double-buffering since we
	do our own.

2006-04-06  Thomas Andersen  <phomes@gmail.com>

	* gnotski.c: Update About dialog

2006-04-04  Callum McKenzie  <callum@spooky-possum.org>

	* gnotski.c: Patch from Przemys©aw Grzegorczyk to unref
	the GnomeProgram in all main loops.

2006-04-03  Callum McKenzie  <callum@spooky-possum.org>

	* gnotski.desktop.in: 
	* Makefile.am:
	* gnotski.c: Update the icon handling to use icon themes. Rename
	gnotski-icon.png to gnome-klotski.png.

2006-03-29  Callum McKenzie  <callum@spooky-possum.org>

	* gnotski.c: Migrate from popt -> GOption.

2006-03-22  Callum McKenzie  <callum@spooky-possum.org>

	* help/C/gnotski.xml: Add an authors section and a license
	section.

2006-01-17  Callum McKenzie  <callum@spooky-possum.org>

	* gnotski.c: Patch from Scott Bronson to ensure user-edited
	accelerators are saved (bug #327280).

2005-07-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/figures/*:
	* help/C/gnotski.xml: Bumped the version number for 2.12 and redid
	the screenshots.

2005-07-11  Richard Hoelscher  <rah@rahga.com>
